# novel-audio-analyzer

./: .gitignore  LICENSE  README.md  app_flask.py  pyproject.toml
core/: asr_engine.py  cache_manager.py  llm_engine.py
templates/: index.html
