[project]
name = "novel-analyzer"
version = "0.1.0"
description = "有声小说批量分析系统 (Flask + RTX 4060)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.5.0",
    "bitsandbytes==0.45.0",
    "ctranslate2>=4.8.0",
    "faster-whisper>=1.2.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",      # 可选，可保留
    "numpy==1.26.4",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers==4.48.0",
]

# 默认索引（清华）
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# PyTorch CUDA 索引
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# 指定 torch 系列包从 PyTorch 源安装
[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }